# PromptPal

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  README.md  build-cargo.ps1  build-release.ps1  build.bat  build.ps1  build2.ps1  build3.ps1  build4.ps1  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
.workbuddy/memory/: 2026-05-18.md
cli/: README.md  package-lock.json  package.json
cli-rs/: Cargo.toml
cli-rs/src/: main.rs
cli/lib/: api.js  clipboard.js  ui.js
docs/: PromptPal功能文档.md
scripts/: build-cli.cjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AIGeneratePanel.vue  ContextMenu.vue  DesktopPet.vue  HoloMenu.vue  NetworkSearch.vue  PanelPage.vue  PetStyleSettings.vue  PromptCard.vue  PromptEditor.vue  PromptPanel.vue  QuickInject.vue  SettingsPanel.vue  TodoPanel.vue
src/history/: AIGeneratePanel.vue  NetworkSearch.vue  PromptCard.vue  PromptEditor.vue  PromptPanel.vue  SettingsPanel.vue  index.html  index.ts  petStyleStore.ts  platform.ts  promptApi.ts  promptStore.ts  settingsStore.ts  vite.config.ts.timestamp-1779066483088-64ec96da0bf71.mjs  vite.config.ts.timestamp-1779066536817-ae9f9ff427a7.mjs
src/history/assets/: dist-js-jzYR2yrh.js  index-BiaA58pi.js  index-ZZcj6XgC.css
src/services/: platform.ts  promptApi.ts
src/stores/: petStyleStore.ts  promptStore.ts  settingsStore.ts  todoStore.ts
src/types/: index.ts
